tenzir/integration/data/reference/pipelines_local/test_print_nested_data/step_03.ref
error: field c is not of type record
 --> <input>:1:19
  |
1 | read json | print a.b.c json
  |                   ^^^^^ 
  |